--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,53 +1,45 @@
-name: Deploy Strapi to ECS (Blue/Green)
+name: Deploy Strapi to ECS using CodeDeploy Blue/Green
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: us-east-2
-      CODEDEPLOY_APP: strapi-cd-app-siya
-      CODEDEPLOY_DEPLOYMENT_GROUP: strapi-cd-dg-siya
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-2
 
-      - name: Register ECS Task Definition
-        id: register_taskdef
+      - name: Register new ECS task definition
+        id: register-task
         run: |
           TASK_DEF_ARN=$(aws ecs register-task-definition \
             --cli-input-json file://ecs-task-def.json \
             --query 'taskDefinition.taskDefinitionArn' \
             --output text)
-          echo "taskDefinitionArn=$TASK_DEF_ARN" >> $GITHUB_OUTPUT
           echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
 
-      - name: Replace task definition in AppSpec
+      - name: Render AppSpec file with Task Definition ARN
         run: |
-          cp appspec.yml appspec-rendered.yml
-          sed -i "s|PLACEHOLDER_TASK_DEF_ARN|$TASK_DEF_ARN|g" appspec-rendered.yml
+          sed "s|PLACEHOLDER_TASK_DEF_ARN|$TASK_DEF_ARN|g" appspec.yml > appspec-rendered.yml
 
-      - name: Trigger CodeDeploy deployment
+      - name: Deploy to ECS via CodeDeploy
         run: |
           CONTENT=$(cat appspec-rendered.yml | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
           aws deploy create-deployment \
-            --application-name "$CODEDEPLOY_APP" \
-            --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$CONTENT\"}" \
+            --application-name strapi-cd-app-siya \
+            --deployment-group-name strapi-cd-dg-siya \
+            --revision "{\"revisionType\":\"AppSpecContent\",\"appSpecContent\":{\"content\":\"$CONTENT\"}}" \
             --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
-            --region "$AWS_REGION"
+            --file-exists-behavior OVERWRITE
 
