Fix CodeDeploy deployment: removed unsupported fileExistsBehavior

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,5 @@ jobs:
             --application-name strapi-cd-app-siya \
             --deployment-group-name strapi-cd-dg-siya \
             --revision "{\"revisionType\":\"AppSpecContent\",\"appSpecContent\":{\"content\":\"$CONTENT\"}}" \
-            --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
-            --file-exists-behavior OVERWRITE
+            --deployment-config-name CodeDeployDefault.ECSAllAtOnce
 
